correct links on social icons

--- a/index.html
+++ b/index.html
@@ -487,17 +487,26 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
       <div class="inner">
         <ul class="icons">
           <li>
-            <a href="#" class="icon fa-twitter"
+            <a
+              href="https://github.com/gsamaniego41"
+              class="icon fa-github"
+              target="_blank"
               ><span class="label">Twitter</span></a
             >
           </li>
           <li>
-            <a href="#" class="icon fa-github"
+            <a
+              href="https://www.linkedin.com/in/gabriel-samaniego-69525239/"
+              class="icon fa-linkedin"
+              target="_blank"
               ><span class="label">Github</span></a
             >
           </li>
           <li>
-            <a href="#" class="icon fa-dribbble"
+            <a
+              href="https://www.instagram.com/g.samaniego/"
+              class="icon fa-instagram"
+              target="_blank"
               ><span class="label">Dribbble</span></a
             >
           </li>
