--- a/index.html
+++ b/index.html
@@ -58,10 +58,23 @@
         <div class="row">
           <article class="col-6 col-12-xsmall work-item">
             <a href="images/fulls/01.jpg" class="image fit thumb"
-              ><img src="images/thumbs/01.jpg" alt=""
+              ><img
+                src="images/thumbs/01.jpg"
+                alt="Lambda School Project - Lambda Notes"
             /></a>
-            <h3>Magna sed consequat tempus</h3>
-            <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+            <h3>
+              <a
+                href="https://github.com/gsamaniego41/lambda-notes"
+                title="GitHub Repository"
+                target="_blank"
+                >Lambda Notes</a
+              >
+            </h3>
+            <p>A Lambda School front end and back end project</p>
+            <p>Tech Stack: React, Node, Express, SQLite3</p>
+            <a href=""
+              ><i class="icon fa-github" title="GitHub Repository"></i
+            ></a>
           </article>
           <article class="col-6 col-12-xsmall work-item">
             <a href="images/fulls/02.jpg" class="image fit thumb"
