adds SJ Architects project link

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
           faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque
           cubilia.
         </p>
-        <ul class="actions">
+        <!-- <ul class="actions">
           <li><a href="#" class="button">Learn More</a></li>
-        </ul>
+        </ul> -->
       </section>
 
       <!-- Two -->
@@ -70,18 +70,33 @@
                 >Lambda Notes</a
               >
             </h3>
-            <p>A Lambda School front end and back end project</p>
+            <p>A Lambda School project: Week 6-Week 15</p>
             <p>Tech Stack: React, Node, Express, SQLite3</p>
             <a href=""
-              ><i class="icon fa-github" title="GitHub Repository"></i
+              ><i class="icon fa-github" title="Project Repository"></i
             ></a>
           </article>
           <article class="col-6 col-12-xsmall work-item">
             <a href="images/fulls/02.jpg" class="image fit thumb"
               ><img src="images/thumbs/02.jpg" alt=""
             /></a>
-            <h3>Ultricies lacinia interdum</h3>
-            <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+            <h3>
+              <a
+                href="https://thirsty-mccarthy-503e88.netlify.com/index.html"
+                target="_blank"
+              >
+                S&J Architects
+              </a>
+            </h3>
+            <p>A Lambda School project: Week 1-Week 5</p>
+            <p>
+              Tech Stack: HTML, LESS, Vanilla JavaScript, GSAP Animation
+            </p>
+            <a
+              href="https://github.com/gsamaniego41/User-Interface-Project-Week"
+              target="_blank"
+              ><i class="icon fa-github" title="Project Repository"></i
+            ></a>
           </article>
           <article class="col-6 col-12-xsmall work-item">
             <a href="images/fulls/03.jpg" class="image fit thumb"
@@ -113,7 +128,14 @@
           </article>
         </div>
         <ul class="actions">
-          <li><a href="#" class="button">Full Portfolio</a></li>
+          <li>
+            <a
+              href="https://github.com/gsamaniego41"
+              class="button"
+              target="_blank"
+              >GitHub Profile</a
+            >
+          </li>
         </ul>
       </section>
 
