--- a/index.html
+++ b/index.html
@@ -72,8 +72,15 @@
             </h3>
             <p>A Lambda School project: Week 6-Week 15</p>
             <p>Tech Stack: React, Node, Express, SQLite3</p>
-            <a href=""
-              ><i class="icon fa-github" title="Project Repository"></i
+            <a
+              href="https://github.com/gsamaniego41/front-end-project-week"
+              target="_blank"
+              ><i class="icon fa-github" title="Front-end Repository"></i
+            ></a>
+            <a
+              href="https://github.com/gsamaniego41/back-end-project-week"
+              target="_blank"
+              ><i class="icon fa-github" title="Back-end Repository"></i
             ></a>
           </article>
           <article class="col-6 col-12-xsmall work-item">
@@ -90,7 +97,7 @@
             </h3>
             <p>A Lambda School project: Week 1-Week 5</p>
             <p>
-              Tech Stack: HTML, LESS, Vanilla JavaScript, GSAP Animation
+              Tech Stack: HTML, LESS, Vanilla JavaScript, GSAP
             </p>
             <a
               href="https://github.com/gsamaniego41/User-Interface-Project-Week"
@@ -123,8 +130,21 @@
             <a href="images/fulls/06.jpg" class="image fit thumb"
               ><img src="images/thumbs/06.jpg" alt=""
             /></a>
-            <h3>Risus ornare lacinia</h3>
-            <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+            <h3>
+              <a
+                href="https://eager-villani-63d600.netlify.com/"
+                target="_blank"
+              >
+                Avengers Object Oriented Game
+              </a>
+            </h3>
+            <p>Lambda School project (Week 3)</p>
+            <p>Tech Stack: HTML, CSS, Vanilla JavaScript</p>
+            <a
+              href="https://github.com/gsamaniego41/JavaScript-III"
+              target="_blank"
+              ><i class="icon fa-github" title="Project Repository"></i
+            ></a>
           </article>
         </div>
         <ul class="actions">
